--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <source src="bg-video.mp4.mp4" type="video/mp4">
     </video>
     <div class="vid ">
+        <h1>CONGRATS YOU WON 🎉
         <h1> SEND A MESSAGE TO
             < <br>THE GIVEAWAY ADMIN
         </h1>
@@ -24,5 +25,6 @@
 
     </div>
 </body>
+
 
 </html>
