--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             < <br>THE GIVEAWAY ADMIN
         </h1>
         <div>
-            <h1 class="up ">Click on here to claim now</h1>
+            <p class="up ">Click on here to claim now</p>
             <img src="image.png" alt=" " style="width: 10%; padding-left: 120px; ">
         </div>
         <a href="https://t.me/Elongiveaways2025 ">click here</a>
@@ -28,5 +28,6 @@
 
 
 </html>
+
 
 
