--- a/index.html
+++ b/index.html
@@ -12,22 +12,21 @@
     <video class="background-video" autoplay muted loop>
         <source src="bg-video.mp4.mp4" type="video/mp4">
     </video>
-    <div class="vid ">
-        <h1>CONGRATS YOU WON 🎉
-        <h1> SEND A MESSAGE TO
-            < <br>THE GIVEAWAY ADMIN
-        </h1>
-        <div>
-            <p class="up ">Click on here to claim now</p>
-            <img src="image.png" alt=" " style="width: 10%; padding-left: 120px; ">
-        </div>
-        <a href="https://t.me/Elongiveaways2025 ">click here</a>
+    <div class="vid">
+    <h1>CONGRATS YOU WON 🎉</h1>
+    <h1>SEND A MESSAGE TO <br> THE GIVEAWAY ADMIN</h1>
 
+    <div>
+        <p class="up">Click on here to claim now</p>
+        <img src="image.png" alt=" " style="width: 10%; padding-left: 120px;">
     </div>
+    <a href="https://t.me/Elongiveaways2025">click here</a>
+</div>
 </body>
 
 
 </html>
+
 
 
 
