--- a/index.html
+++ b/index.html
@@ -2,28 +2,33 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Giveaway</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <video class="background-video" autoplay muted loop>
-        <source src="bg-video.mp4.mp4" type="video/mp4">
-    </video>
-    <div class="vid">
+  <!-- Background Video -->
+  <video class="background-video" autoplay muted loop>
+    <source src="bg-video.mp4.mp4" type="video/mp4">
+  </video>
+
+  <!-- Content -->
+  <div class="vid">
     <h1>CONGRATS YOU WON 🎉</h1>
     <h1>SEND A MESSAGE TO <br> THE GIVEAWAY ADMIN</h1>
 
-    <div>
-        <p class="up">Click on here to claim now</p>
-        <img src="image.png" alt=" " style="width: 10%; padding-left: 120px;">
+    <!-- Claim Container (text + arrow) -->
+    <div class="claim-container">
+      <p class="up">Click on here to claim now</p>
+      <img src="image.png" alt="Arrow" class="arrow">
     </div>
-    <a href="https://t.me/Elongiveaways2025">click here</a>
-</div>
-</body>
 
+    <!-- Button -->
+    <a href="https://t.me/Elongiveaways2025">Click Here</a>
+  </div>
+</body>
 
 </html>
 
